SignUp Page-first version

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <label for="checkOut">CHECK OUT </label><input type="date" id="checkOut" name="checkOut">
     </div>
     <div class="passengerNumber">
-    <button>ADULTS</button>
+    <button class="buttonIndex" id="buttonAdults">ADULTS</button>
     <div class="button">
-    <button>CHILDREN</button>
+    <button class="buttonIndex" id="buttonChildren">CHILDREN</button>
     </div>
     </div>
     <div class="submit"><br>
