Password Visibility Changes

--- a/signUp.html
+++ b/signUp.html
@@ -53,11 +53,13 @@
                  <div class="form__input-error-message"></div>
              </div> 
              <div class="form__input-group">
-                 <input type="password" class="form__input password__visibility" autofocus placeholder="Password">
+                 <input type="password" class="form__input password__visibility1" autofocus placeholder="Password">
+                 <i class="visibility__button1"><span id="icon1" class = "material-icons icon">visibility</span></i> 
                  <div class="form__input-error-message"></div>
             </div>
             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <input type="password" class="form__input password__visibility2" autofocus placeholder="Confirm password">
+                <i class="visibility__button2"><span id="icon2" class = "material-icons icon">visibility</span></i> 
                 <div class="form__input-error-message"></div>
            </div>
             <button class="form__button" type="submit ">Continue</button>
